# Biller_Interface

./: Cargo.toml  README.md  run.sh
app/: Cargo.toml
app/src/: main.rs
appconfig/: dev.toml
client/: Cargo.toml
client/src/: http.rs  lib.rs  mysql.rs  postgres.rs
config/: Cargo.toml
config/src/: db.rs  http.rs  lib.rs  logtracer.rs  main.rs  mysql.rs  profile.rs  redis.rs  server.rs
constants/: Cargo.toml
constants/src/: lib.rs
errors/: Cargo.toml
errors/src/: lib.rs
initialize/: Cargo.toml
initialize/src/: lib.rs
run/: init_postgres.sh
server/: Cargo.toml
server/src/: lib.rs
utils/: Cargo.toml
utils/src/: file.rs  hash.rs  lib.rs  password.rs  random.rs
