[package]
name = "client"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
config = {path = "../config"}
utils = {path = "../utils"}
errors = {path = "../errors"}
fake = {workspace = true}
hex = {workspace = true}
hmac = {workspace = true}
itertools = {workspace = true}
lettre = {workspace = true}
once_cell = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
sentry = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
sqlx = {workspace = true}
strum = {workspace = true}
tera = {workspace = true}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}

utoipa = {workspace = true}
uuid = {workspace = true}

