[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
config = {workspace = true}
utils = {path = "../utils"}
once_cell = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
redis = {workspace = true}
sentry = {workspace = true}
serde = {workspace = true}
sqlx = {workspace = true}
tera = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}



