[package]
name = "errors"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = {workspace = true}
actix-web = {workspace = true}
anyhow = {workspace = true}
argon2 = {workspace = true}
base64 = {workspace = true}
config = {workspace = true}
jsonwebtoken = {workspace = true}
lettre = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
tera = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
url = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
validator = {workspace = true}