[package]
name = "utils"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {workspace = true}
anyhow = {workspace = true}
argon2 = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
errors = {path = "../errors"}
fake = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {workspace = true}
once_cell = {workspace = true}
openssl = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
test-context = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
